--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Login</title>
+
+
+
+    
   </head>
   <body>
     <main>
       <form method="post" action="/login">
-        <h1>Login Now</h1>
+        <h1>Sign in</h1>
         <input
           type="email"
           name="email"
